[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day01"

[[bin]]
name = "day02"

[[bin]]
name = "day03"

[[bin]]
name = "day04"

[[bin]]
name = "day05"

[[bin]]
name = "day06"

[[bin]]
name = "day07"

[[bin]]
name = "day08"

[[bin]]
name = "day09"

[[bin]]
name = "day10"

[[bin]]
name = "day11"

[dependencies]
indoc = "1.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
regex = "1.7.0"
