[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day01"

[[bin]]
name = "day02"

[[bin]]
name = "day03"

[[bin]]
name = "day04"

[[bin]]
name = "day05"

[[bin]]
name = "day06"

[[bin]]
name = "day07"

[[bin]]
name = "day08"

[[bin]]
name = "day09"

[[bin]]
name = "day10"

[[bin]]
name = "day11"

[[bin]]
name = "day12"

[[bin]]
name = "day13"

[[bin]]
name = "day14"

[[bin]]
name = "day15"

[[bin]]
name = "day16"

[[bin]]
name = "day17"

[[bin]]
name = "day18"

[[bin]]
name = "day19"

[[bin]]
name = "day20"

[[bin]]
name = "day21"

[[bin]]
name = "day22"

[[bin]]
name = "day23"

[[bin]]
name = "day24"

[[bin]]
name = "day25"

[dependencies]
indoc = "1.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
regex = "1.7.0"
